# netdata

./: .ai-agent.json  .clang-format  .codacy.yml  .codeclimate.yml  .csslintrc  .dockerignore  .env.template  .eslintignore  .eslintrc  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .lgtm.yml  .mdl-style.rb  .mlc_config.json  .remarkignore  .remarkrc.js  .shellcheckrc  .snapcraftignore  .sonarcloud.properties  .squash.yml  .travis.yml  .yamllint.yml  AGENTS.md  BREAKING_CHANGES.md  BUILD.md  CHANGELOG-V1.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE-REVIEW.md  CODE_OF_CONDUCT.md  CONFIGURATION-SPEC-VERIFICATION-REPORT.md  CONTRIBUTING.md  CONTRIBUTORS.md  CRUSH.md  ChangeLog  (+257 more)
aclk/: Makefile.am  README.md  aclk.c  aclk.h  aclk_alarm_api.c  aclk_alarm_api.h  aclk_api.c  aclk_api.h  aclk_capas.c  aclk_capas.h  aclk_charts.c  aclk_charts.h  aclk_charts_api.c  aclk_charts_api.h  aclk_collector_list.c  aclk_collector_list.h  aclk_common.c  aclk_common.h  aclk_contexts_api.c  aclk_contexts_api.h  aclk_events.h  aclk_flight_recorder.c  aclk_flight_recorder.h  aclk_lws_https_client.c  aclk_lws_https_client.h  aclk_lws_wss_client.c  aclk_lws_wss_client.h  aclk_otp.c  aclk_otp.h  aclk_proxy.c  aclk_proxy.h  aclk_query.c  aclk_query.h  aclk_query_queue.c  aclk_query_queue.h  aclk_rrdhost_state.h  aclk_rx_msgs.c  aclk_rx_msgs.h  aclk_stats.c  aclk_stats.h  (+11 more)
backends/: Makefile.am  README.md  TIMESCALE.md  WALKTHROUGH.md  backends.c  backends.h  nc-backend.sh
charts.d/: IPMI.chart.sh  Makefile.am  README.md  airsearches.chart.sh  ap.chart.sh  apache.chart.sh  apcupsd.chart.sh  cpu_apps.chart.sh  cpufreq.chart.sh  crsproxy.chart.sh  example-chart.sh  example.chart.sh  exim.chart.sh  hddtemp.chart.sh  httpdmodcache.chart.sh  libreswan.chart.sh  load_average.chart.sh  mem_apps.chart.sh  mysql.chart.sh  netstat.chart.sh  nginx.chart.sh  nut.chart.sh  opensips.chart.sh  phpfpm.chart.sh  pi.chart.sh  postfix.chart.sh  sensors.chart.sh  skeleton-chart.sh  squid-chart.sh  squid.chart.sh  tc-qos-collector.sh  temp.chart.sh  tomcat.chart.sh
claim/: Makefile.am  README.md  claim.c  claim.h  claim.sh.in  netdata-claim.sh.in
collectors/: COLLECTORS.md  Makefile.am  QUICKSTART.md  README-TEMPLATE.md  README.md  REFERENCE.md  all.h  multi_module_schema.yaml  multi_module_template.yaml  schema.yaml  template.yaml  units.py  utils.h
conf.d/: Makefile.am  aggregated_hosts.conf  apps_groups.conf  charts.d.conf  edit-config.in  elastic_node.conf  fping.conf  health_alarm_notify.conf  health_email_recipients.conf  health_pushover_tokens.conf  java.d.conf  python.d.conf  squid.conf  stream.conf
contrib/: Makefile.am  README.md  cppcheck.sh  nc-backend.sh
daemon/: Makefile.am  README.md  analytics.c  analytics.h  anonymous-statistics-alerts.sh.in  anonymous-statistics.sh  anonymous-statistics.sh.in  buildinfo.c  buildinfo.h  commands.c  commands.h  common.c  common.h  daemon.c  daemon.h  event_log.c  event_log.h  event_loop.c  event_loop.h  get-kubernetes-labels.sh.in  global_statistics.c  global_statistics.h  main.c  main.c.orig  main.h  metrics.csv  mqtt.c  mqtt.h  ndsudo.c  pipename.c  pipename.h  service.c  service.h  signals.c  signals.h  static_threads.c  static_threads.h  static_threads_freebsd.c  static_threads_linux.c  static_threads_macos.c  (+4 more)
diagrams/: Makefile.am  build.sh  config.puml  netdata-for-ephemeral-nodes.xml  netdata-overview.xml  netdata-proxies-example.xml  registry.puml  simple-parent-child.xml  windows.xml
health/: Makefile.am  QUICKSTART.md  README.md  REFERENCE.md  alarm-email.sh  health.c  health.h  health_alarm_notify.conf  health_config.c  health_dyncfg.c  health_event_loop.c  health_integrations.c  health_internals.h  health_json.c  health_log.c  health_notifications.c  health_prototypes.c  health_prototypes.h  health_silencers.c  health_silencers.h  health_variable.c  health_virtual.c  rrdcalc.c  rrdcalc.h  rrdvar.c  rrdvar.h
java.d/: .codacy.yml  .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE-REDISTRIBUTED.md  Makefile.am  README.md  eclipse-formatter.xml  mvnw.cmd  netdata-plugin-java-daemon-installer.sh  pom.xml
libnetdata/: Makefile.am  README.md  clocks.c  clocks.h  endian.h  eval.h  inlined.h  libndinc.h  libnetdata.c  libnetdata.h  locks.c  log.h  os.c  os.h  popen.c  required_dummies.h  simple_hashtable.h  simple_hashtable_undef.h  socket.h  statistical.c  storage_number.c  storage_number.h  sysinc.h  threads.c  url.c  utils.c  utils.h  xxhash.h
logsmanagement/: Makefile.am  README.md  circular_buffer.c  circular_buffer.h  compression.c  compression.h  db_api.c  db_api.h  defaults.h  file_info.h  flb_plugin.c  flb_plugin.h  functions.c  functions.h  helper.h  logsmanag_config.c  logsmanag_config.h  logsmanagement.c  logsmanagement.conf  logsmanagement_conf.h  parser.c  parser.h  query.c  query.h  query_test.c  query_test.h  tail_plugin.c  tail_plugin.h
makeself/: Makefile.am  README.md  build-x86_64-static.sh  build.sh  functions.sh  install-alpine-packages.sh  install-or-update.sh  makeself-header.sh  makeself-help-header.txt  makeself-license.txt  makeself.lsm  makeself.sh  post-installer.sh  run-all-jobs.sh  setup-x86_64-static.sh
node.d/: Makefile.am  README.md  fronius.node.js  named.node.js  sma_webbox.node.js  snmp.node.js  stiebeleltron.node.js
plugins/: Makefile.am  README.md  all.h
plugins.d/: Makefile.am  README  README.md  alarm-email.sh  alarm-notify.sh  alarm-notify.sh.in  alarm-pushover.sh  alarm-test.sh  alarm.sh  cgroup-name.sh  cgroup-name.sh.in  cgroup-network-helper.sh  charts.d.dryrun-helper.sh  charts.d.plugin  charts.d.plugin.in  fping.plugin  fping.plugin.in  java.d.plugin  loopsleepms.sh.inc  node.d.plugin  node.d.plugin.in  python.d.plugin  python.d.plugin.in  sma_webbox.plugin  tc-qos-helper.sh  tc-qos-helper.sh.in
python.d/: Makefile.am  README.md  Samba.chart.py  apache.chart.py  apache_cache.chart.py  beanstalk.chart.py  bind_rndc.chart.py  boinc.chart.py  ceph.chart.py  chrony.chart.py  couchdb.chart.py  cpufreq.chart.py  cpuidle.chart.py  dns_query_time.chart.py  (+72 more)
(+29348 files in other folders)
